# ices-data-schema-scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ices_data_schema_scraper/: cli.py  scraper.py
scripts/: configure.sh  update.sh
